[package]
authors = ["snail"]
name = "a_fun_application"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.18.0" }
image = "0.24.2"
lazy_static = "1.4.0"
futures = "0.3.21"
rfd = "0.8.1"
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_json = "1.0.81"
toml = "0.5.9"
